# dict-to-yaml

./: pyproject.toml  requirements.txt
dict_to_yaml/: app.py
